[package]
name = "threading-spike"
version = "0.1.0"
authors = ["jgeddes <johngeddes_91@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hostname = "0.3.0"
machine-uid = "0.1.0"
systemstat = "0.1.5"
rocket = "0.4.5"
rocket_contrib = "0.4.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "1.4.0"
rand = "0.7.3"